template html css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
    
-   <div class="myContainer"></div>
+   <div class="myContainer d-flex flex-column justify-content-center align-items-center">
+
+      <h4 class="my-5 fw-bold">Memorizza questi cinque numeri, hai 30 secondi per farlo</h4>
+      <div class="box_content d-flex justify-content-center align-items-center">
+         <div class="content_numbers">
+            <!-- Qui dentro inserisco i numeri random -->
+            <h1>99, 99, 99, 99, 99</h1>
+         </div>
+      </div>
+
+   </div>
 
    <script src="js/script.js"></script>
 </body>
