--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
    
    <div class="myContainer d-flex flex-column justify-content-center align-items-center">
 
-      <h4 class="my-5 fw-bold">Memorizza questi cinque numeri, hai 30 secondi per farlo</h4>
+      <h4 class="mb-3 fw-bold">Memorizza questi cinque numeri, hai 30 secondi per farlo</h4>
+      <h3 class="mb-5">Count Down:</h3>
       <div class="box_content d-flex justify-content-center align-items-center">
          <div class="content_numbers">
             <!-- Qui dentro inserisco i numeri random -->
