--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       <h4 class="mb-3 fw-bold">Memorizza questi cinque numeri, hai 30 secondi per farlo</h4>
       <h3 class="mb-5">Count Down:</h3>
       <div class="box_content d-flex justify-content-center align-items-center">
-         <div class="content_numbers">
+         <div class="content_numbers d-flex">
             <!-- Qui dentro inserisco i numeri random -->
-            <h1>99, 99, 99, 99, 99</h1>
+            
+
          </div>
       </div>
 
