--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div class="myContainer d-flex flex-column justify-content-center align-items-center">
 
       <h4 class="mb-3 fw-bold">Memorizza questi cinque numeri, hai 30 secondi per farlo</h4>
-      <h3 class="mb-5">Count Down:</h3>
+      <h3 id="countDown" class="mb-5"></h3>
       <div class="box_content d-flex justify-content-center align-items-center">
          <div class="content_numbers d-flex">
             <!-- Qui dentro inserisco i numeri random -->
